fix: repair scrollbar view (Thu 17.10.24 5:30 PM)

--- a/index.css
+++ b/index.css
@@ -221,7 +221,6 @@ body {
   color: var(--color-dark);
   background-color: var(--color-light);
   scrollbar-width: thin;
-  scrollbar-color: green green;
 }
 
 .container {
